# my_custom_pkg

./: CMakeLists.txt  README.md  package.xml
include/my_custom_pkg/: cpp_header.hpp
my_custom_pkg/: module_to_import.py
scripts/: py_node.py
src/: cpp_node.cpp
